# FastAPI_UoW

./: README.md  pyproject.toml  sqlite.db
app/: main.py
app/db/: sqlite.py
app/models/: users.py
app/repositories/: users.py
app/routers/: all.py  users.py
app/services/: users.py
app/utils/: dependencies.py  repository.py  unitofwork.py
migrations/: env.py
migrations/versions/: bb45021a904a_initial_migration.py
