[tool.poetry]
name = "fastapi-uow"
version = "0.1.0"
description = ""
authors = ["Ser-D <ipc.avanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
alembic = "^1.13.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
